# gl-snake

./: .gitignore  CMakeLists.txt  README.md
VC++/gl-snake/gl-snake/: main.cpp
src/: main.cpp  snake.cpp
